@@ -5,6 +5,7 @@
   * Add Mixin#respond_to
   * Mixin#send now calls real class methods if they exist
   * Rename to phuby
+  * Derived classes from Mixin look for a method called initialize to use as their constructors
 
 2009-03-10 - Sean Huber (shuber@huberry.com)
   * Initial commit
